--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+*{
+  font-family: 'Quicksand', sans-serif;
+}
+
 .profil-mhs p span {
   display: inline-block;
   width: 100px;
