tambah keterangan warna pgrs studi

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,3 +60,19 @@ table {
   max-width: 75%; /* Sesuaikan dengan lebar yang diinginkan */
   width: 100%;
 }
+
+.card-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.card {
+  padding: 10px; /* Tambahkan padding pada setiap card */
+  border-radius: 10px; /* Tambahkan border-radius untuk sudut yang lebih lembut */
+  margin-bottom: 15px; /* Tambahkan margin bawah pada setiap card */
+  margin-right: 10px; /* Jarak antara card dan teks keterangan */
+}
+
+
+  
