add chart in dashboard doswal and dept

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,16 @@
   font-family: 'Quicksand', sans-serif;
 }
 
+.navbar
+{
+  border-bottom:1px solid grey;
+}
+
+.footer
+{
+  border-top:1px solid grey;
+}
+
 body {
   height: 100vh;
   display: flex;
