--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,7 +77,7 @@ table {
   justify-content: space-between;
 }
 
-.card {
+.ket-warna {
   padding: 10px; /* Tambahkan padding pada setiap card */
   border-radius: 10px; /* Tambahkan border-radius untuk sudut yang lebih lembut */
   margin-bottom: 15px; /* Tambahkan margin bawah pada setiap card */
